namespace NurFlac.UserManagement.Entities;

public enum UserStatus
{
    Pending,
    Whitelisted,
    Blacklisted,
    TimedOut
}
